--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype>
 <html>
-	<head>
-		<title>First Website</title>
-	</head>
-	<body>
-		<p>Page Here Hi Hello World</p>
-	</body>
+
+<head>
+	<title>First Website</title>
+</head>
+
+<body>
+	<p>Page Here Hi Hello World</p>
+	<h1>HELL YES</h1>
+</body>
+
 </html>
